--- a/logisticreg.ipynb
+++ b/logisticreg.ipynb
@@ -74,6 +74,38 @@
     "\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.2, random_state = 0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Y' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [3], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpreprocessing\u001b[39;00m \u001b[39mimport\u001b[39;00m LabelEncoder\n\u001b[1;32m      4\u001b[0m labelencoder_Y \u001b[39m=\u001b[39m LabelEncoder()\n\u001b[0;32m----> 5\u001b[0m Y \u001b[39m=\u001b[39m labelencoder_Y\u001b[39m.\u001b[39mfit_transform(Y)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Y' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#Encoding\n",
+    "\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "labelencoder_Y = LabelEncoder()\n",
+    "Y = labelencoder_Y.fit_transform(Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
