--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,18 +770,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices",
+     "ename": "TypeError",
+     "evalue": "pairplot() got an unexpected keyword argument 'color'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [8], line 7\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcolors\u001b[39;00m \u001b[39mimport\u001b[39;00m LinearSegmentedColormap\n\u001b[0;32m----> 7\u001b[0m sns\u001b[39m.\u001b[39mpairplot(breastcancerdf[[\u001b[39m'\u001b[39;49m\u001b[39mradius_mean\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mtexture_mean\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mperimeter_mean\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39marea_mean\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m'\u001b[39;49m\u001b[39mdiagnosis\u001b[39;49m\u001b[39m'\u001b[39;49m]], hue\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mdiagnosis\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      9\u001b[0m \u001b[39m#pink_purple_palette = sns.color_palette(['#FF69B4'], as_cmap=True)\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \n\u001b[1;32m     11\u001b[0m \n\u001b[1;32m     12\u001b[0m \u001b[39m# Generating synthetic data for illustration\u001b[39;00m\n\u001b[1;32m     13\u001b[0m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mseed(\u001b[39m42\u001b[39m)\n",
-      "\u001b[0;31mIndexError\u001b[0m: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices"
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [6], line 7\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcolors\u001b[39;00m \u001b[39mimport\u001b[39;00m LinearSegmentedColormap\n\u001b[0;32m----> 7\u001b[0m sns\u001b[39m.\u001b[39;49mpairplot(breastcancerdf[[\u001b[39m'\u001b[39;49m\u001b[39mradius_mean\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mtexture_mean\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mperimeter_mean\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39marea_mean\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m'\u001b[39;49m\u001b[39mdiagnosis\u001b[39;49m\u001b[39m'\u001b[39;49m]], hue\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mdiagnosis\u001b[39;49m\u001b[39m'\u001b[39;49m, color \u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mRdPu\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m     11\u001b[0m \u001b[39m# Generating synthetic data for illustration\u001b[39;00m\n\u001b[1;32m     12\u001b[0m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mseed(\u001b[39m42\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: pairplot() got an unexpected keyword argument 'color'"
      ]
     }
    ],
@@ -792,9 +792,8 @@
     "from matplotlib.colors import LinearSegmentedColormap\n",
     "\n",
     "\n",
-    "sns.pairplot(breastcancerdf[['radius_mean', 'texture_mean', 'perimeter_mean', 'area_mean','diagnosis']], hue='diagnosis')\n",
+    "sns.pairplot(breastcancerdf[['radius_mean', 'texture_mean', 'perimeter_mean', 'area_mean','diagnosis']], hue='diagnosis', color ='RdPu')\n",
     "\n",
-    "#pink_purple_palette = sns.color_palette(['#FF69B4'], as_cmap=True)\n",
     "\n",
     "\n",
     "# Generating synthetic data for illustration\n",
@@ -803,9 +802,8 @@
     "\n",
     "\n",
     "\n",
-    "#pink_cmap = LinearSegmentedColormap.from_list('pink_cmap', 'Rdpu', N=256)\n",
+    "pink_cmap = LinearSegmentedColormap.from_list('pink_cmap', 'RdPu', N=256)\n",
     "\n",
-    "# Create a pair plot with pink and purple colors\n",
     "sns.pairplot(breastcancerdf)\n",
     "plt.show()\n",
     "\n",
