prediction model edits

--- a/predict.ipynb
+++ b/predict.ipynb
@@ -304,10 +304,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = breastcancerdf.iloc[:, 1:-1].values\n",
+    "y = breastcancerdf.iloc[:, -1].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.2, random_state = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train=breastcancerdf.drop(columns=[\"diagnosis\"])\n",
+    "y_train=breastcancerdf[\"diagnosis\"]\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_train, y_train, test_size=0.2)"
+   ]
   }
  ],
  "metadata": {
