--- a/predict.ipynb
+++ b/predict.ipynb
@@ -839,6 +839,42 @@
     "for index, tup in enumerate(trained_models):\n",
     "    prepare_roc_curve(tup[0], tup[1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model name is  RandomForestClassifier()\n",
+      "accuracy is  96.0 %\n",
+      "precision is  93.0 %\n",
+      "recall is  98.0 %\n",
+      "f1 is  95.0 %\n",
+      "************************************************************************************************************\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "model=RandomForestClassifier(n_estimators=100)\n",
+    "x=breastcancerdf.drop('diagnosis',axis=1)\n",
+    "y=breastcancerdf['diagnosis']\n",
+    "xtrain,xtest,ytrain,ytest=train_test_split(x,y,test_size=0.2,random_state=42)\n",
+    "model.fit(xtrain,ytrain)\n",
+    "y_pred=model.predict(xtest)\n",
+    "from sklearn.metrics import accuracy_score,precision_score,recall_score,f1_score\n",
+    "print(\"model name is \",model)\n",
+    "print(\"accuracy is \",round(accuracy_score(y_pred,ytest),2)*100,'%')\n",
+    "print (\"precision is \",round(precision_score(y_pred,ytest),2)*100,'%')\n",
+    "print(\"recall is \",round(recall_score(y_pred,ytest),2)*100,'%')\n",
+    "print(\"f1 is \",round(f1_score(y_pred,ytest),2)*100,'%')\n",
+    "print(\"************************************************************************************************************\")"
+   ]
   }
  ],
  "metadata": {
