--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -1107,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1117,7 +1117,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [28], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m sns\u001b[39m.\u001b[39mpairplot(breastcancerdf[[\u001b[39m'\u001b[39m\u001b[39mradius_mean\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mtexture_mean\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39marea_mean\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mdiagnosis\u001b[39m\u001b[39m'\u001b[39m]], hue\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mdiagnosis\u001b[39m\u001b[39m'\u001b[39m,)\n\u001b[1;32m      5\u001b[0m color\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mpink\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m----> 6\u001b[0m sns\u001b[39m.\u001b[39;49mpairplot(breastcancerdf, hue\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mdiagnosis\u001b[39;49m\u001b[39m'\u001b[39;49m, color\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mpink\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m      7\u001b[0m plt\u001b[39m.\u001b[39msuptitle(\u001b[39m'\u001b[39m\u001b[39mPairplot of Selected Features\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      8\u001b[0m plt\u001b[39m.\u001b[39msavefig(\u001b[39m'\u001b[39m\u001b[39mbreast cancer pair plot.png\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "Cell \u001b[0;32mIn [31], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m sns\u001b[39m.\u001b[39mpairplot(breastcancerdf[[\u001b[39m'\u001b[39m\u001b[39mradius_mean\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mtexture_mean\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39marea_mean\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mdiagnosis\u001b[39m\u001b[39m'\u001b[39m]], hue\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mdiagnosis\u001b[39m\u001b[39m'\u001b[39m,)\n\u001b[1;32m      5\u001b[0m color\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mpink\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m----> 6\u001b[0m sns\u001b[39m.\u001b[39;49mpairplot(breastcancerdf, hue\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mdiagnosis\u001b[39;49m\u001b[39m'\u001b[39;49m, color\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mpink\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m      7\u001b[0m plt\u001b[39m.\u001b[39msuptitle(\u001b[39m'\u001b[39m\u001b[39mPairplot of Selected Features\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      8\u001b[0m plt\u001b[39m.\u001b[39msavefig(\u001b[39m'\u001b[39m\u001b[39m/breast cancer pair plot.png\u001b[39m\u001b[39m'\u001b[39m)\n",
       "\u001b[0;31mTypeError\u001b[0m: pairplot() got an unexpected keyword argument 'color'"
      ]
     },
@@ -1140,7 +1140,7 @@
     "color='pink'\n",
     "sns.pairplot(breastcancerdf, hue='diagnosis', color='pink')\n",
     "plt.suptitle('Pairplot of Selected Features')\n",
-    "plt.savefig('breast cancer pair plot.png')\n",
+    "plt.savefig('/breast cancer pair plot.png')\n",
     "plt.show()\n"
    ]
   },
